creando carpeta del curso de HTML y CCS parte 4 copiando lo del aula anterior

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Proyecto_Barberia_alura/imagenes
 Proyecto_Barberia_alura_parte3/imagenes/
 Proyecto_Barberia_alura_parte2/imagenes/
 imagenes/
+Proyecto_Barberia_alura_parte4/imagenes/
+
