--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-/material de apoyo/
-/Parte_1/imagenes
+
+Proyecto_Barberia_alura/imagenes
 Proyecto_Barberia_alura_parte3/imagenes/
 Proyecto_Barberia_alura_parte2/imagenes/
+imagenes/
+Proyecto_Barberia_alura_parte4/imagenes/
